--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -13,11 +13,7 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="203dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
 
         <TextView
             android:id="@+id/primeiro_ac"
@@ -82,7 +78,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="15sp"
             android:layout_marginRight="15sp"
-            android:text="Confirme Sua Senha"
+            android:text="Sua Senha"
             android:textSize="15sp"
             android:textStyle="bold" />
 
