--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -33,8 +33,8 @@
             android:layout_height="match_parent"
             android:layout_margin="15sp"
             android:layout_weight="1"
-            android:inputType="text"
-            android:text="Seu nome" />
+            android:hint="Seu nome"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/editTextCpf"
@@ -44,8 +44,8 @@
             android:layout_marginRight="15sp"
             android:layout_marginBottom="15sp"
             android:layout_weight="1"
-            android:inputType="text"
-            android:text="Seu CPF" />
+            android:hint="Seu CPF"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/editTextTelefone"
@@ -55,8 +55,8 @@
             android:layout_marginRight="15sp"
             android:layout_marginBottom="15sp"
             android:layout_weight="1"
-            android:inputType="text"
-            android:text="Seu Telefone" />
+            android:hint="Seu Telefone"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
@@ -67,8 +67,8 @@
             android:layout_marginBottom="15sp"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:text="Seu Email" />
+            android:hint="Seu Email"
+            android:inputType="textEmailAddress" />
 
 
         <TextView
