--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0160B6</color>
+    <color name="yellow">#FFC200</color>
+    <color name="gray">#848383</color>
+    <color name="lightgray">#F5F5F5</color>
+    <color name="green">#00BC75</color>
 </resources>
