--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
 
         <TextView
             android:id="@+id/textView"
@@ -30,78 +18,82 @@
             android:text="Manutenção UFPR"
             android:textAlignment="center"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <View
+            android:id="@+id/containerComponents"
+            style="@style/ConteinerComponents"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+        />
 
         <EditText
             android:id="@+id/editTextCPFLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
+            style="@style/editText"
             android:inputType="text"
-            android:text="Seu CPF"
-            android:textSize="14sp" />
+            android:hint="CPF"
+            android:textSize="20dp"
+            android:drawableRight="@drawable/baseline_person_2_24"
+            app:layout_constraintStart_toStartOf="@id/containerComponents"
+            app:layout_constraintEnd_toEndOf="@id/containerComponents"
+            app:layout_constraintTop_toTopOf="@id/containerComponents"
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_weight="1"
-            android:text="Sua Senha"
-            android:textSize="15sp" />
+            />
 
         <EditText
             android:id="@+id/editTextTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-
-            android:ems="10"
+            android:hint="Senha"
+            style="@style/editText"
+            android:textSize="20dp"
+            android:drawableRight="@drawable/baseline_remove_eye_24"
+            app:layout_constraintStart_toStartOf="@id/containerComponents"
+            app:layout_constraintEnd_toEndOf="@id/containerComponents"
+            app:layout_constraintTop_toBottomOf="@id/editTextCPFLogin"
             android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            android:backgroundTint="#FFC200"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_acessar"
+            style="@style/Button"
             android:onClick="login"
             android:text="Acessar"
-            android:textColor="#0160B6"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:cornerRadius="20sp" />
+
+            app:layout_constraintStart_toStartOf="@id/containerComponents"
+            app:layout_constraintEnd_toEndOf="@id/containerComponents"
+            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/button_acessar"
+            app:layout_constraintStart_toStartOf="@id/containerComponents"
+            app:layout_constraintEnd_toEndOf="@id/containerComponents"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/textViewEsqueceuASenha"
+                style="@style/linkAcesso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
                 android:text="Esqueceu a Senha?"
-                android:textAlignment="center"
-                android:textColor="#848383"
-                android:textColorHighlight="#848383" />
+                app:layout_constraintTop_toBottomOf="@id/button_acessar"
+                app:layout_constraintStart_toStartOf="@id/containerComponents"
+                app:layout_constraintEnd_toEndOf="@id/containerComponents"
+                 />
 
             <TextView
                 android:id="@+id/textViewPrimeiroAcesso"
+                style="@style/linkAcesso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+
                 android:onClick="primeiroAcesso"
                 android:text="Primeiro Acesso?"
                 android:textAlignment="center" />
@@ -110,17 +102,20 @@
 
         <ImageView
             android:id="@+id/logo"
+
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:src="@drawable/logoufpr"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_gravity="center"
+            android:padding="10dp"
 
             />
 
 
-            </LinearLayout>
+
 
 
 
