--- a/app/src/main/res/drawable/edit_text.xml
+++ b/app/src/main/res/drawable/edit_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/lightgray" />
     <corners android:radius="5dp"/>
-    <stroke android:color="@color/yellow" android:width="2dp"/>
+    <stroke android:color="@color/blue" android:width="2dp"/>
 </shape>
