--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,19 +21,23 @@
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginRight">40dp</item>
         <item name="android:layout_marginTop">15dp</item>
+        <item name="android:maxLength">25</item>
 
     </style>
 
-    <style name="Button">
+    <style name="Button_blue">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginRight">40dp</item>
-        <item name="android:layout_marginTop">15dp</item>
-        <item name="android:background">@drawable/button_yellow</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:background">@drawable/button_blue</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:shadowColor">@color/gray</item>
+        <item name="android:shadowDx">10</item>
+
 
 
     </style>
@@ -42,7 +46,7 @@
     <style name="linkAcesso">
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">14dp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">5dp</item>
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginRight">40dp</item>
 
