--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -6,148 +6,158 @@
     android:layout_height="wrap_content"
     tools:context=".PrimeiroAcesso">
 
-    <LinearLayout
+
+<ImageView
+    android:id="@+id/imagemufpr"
+    android:layout_width="match_parent"
+    android:layout_height="190dp"
+    android:src="@drawable/ufpr_primeiroacesso"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+
+
+    />
+
+    <ImageView
+        android:id="@+id/closebutton"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/baseline_close_24"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
+        />
+
+
+    <TextView
+        android:id="@+id/primeiro_ac"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:layout_marginTop="20sp"
 
+        android:text="Primeiro Acesso"
+        android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/imagemufpr"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+    <View
+        android:id="@+id/conteinerComponents"
+        style="@style/ConteinerComponents"
+        app:layout_constraintTop_toBottomOf="@id/primeiro_ac"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
 
-        <TextView
-            android:id="@+id/primeiro_ac"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10sp"
-            android:layout_weight="1"
-            android:text="Primeiro Acesso"
-            android:textAlignment="center"
-            android:textColor="#FFC200"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/editTextName"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15sp"
-            android:layout_weight="1"
-            android:hint="Seu nome"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/editTextCpf"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-            android:hint="Seu CPF"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/editTextTelefone"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-            android:hint="Seu Telefone"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/editTextTextEmailAddress"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:hint="Seu Email"
-            android:inputType="textEmailAddress" />
-
-
-        <TextView
-            android:id="@+id/primeiro_ac3"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:text="Sua Senha"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-
-
-
-        <EditText
-            android:id="@+id/editTextPassword"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-
-            android:ems="10"
-            android:inputType="textPassword"
-            />
-
-
-        <TextView
-            android:id="@+id/primeiro_ac2"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:text="Confirme Sua Senha"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-
-
-
-        <EditText
-            android:id="@+id/editTextPassword2"
-            style="@style/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPassword"
-            />
-
-        <Button
-            android:id="@+id/buttonSalvarCadastro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            android:backgroundTint="#FFC200"
-            android:onClick="salvarCadastro"
-            android:text="Salvar"
-            android:textColor="#0160B6"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:cornerRadius="20sp" />
 
 
         />
 
 
-    </LinearLayout>
+    <EditText
+        android:id="@+id/editTextName"
+        style="@style/editText"
+        app:layout_constraintTop_toTopOf="@id/conteinerComponents"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:hint="Seu nome"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/editTextCpf"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/editTextName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:hint="Seu CPF"
+        android:inputType="text" />
+
+
+    <EditText
+        android:id="@+id/editTextTelefone"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/editTextCpf"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:hint="Seu Telefone"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/editTextEmailAddress"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/editTextTelefone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:hint="Seu Email"
+        android:inputType="textEmailAddress" />
+
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        style="@style/editText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textPassword"
+        android:hint="Sua Senha"
+        />
+
+
+    <EditText
+        android:id="@+id/editTextPassword2"
+        style="@style/editText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="Confirme a Senha"
+        />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonSalvarCadastro"
+            style="@style/Button_yellow"
+            android:onClick="salvarCadastro"
+            android:text="Salvar"
+            app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
