--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,12 +35,31 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:shadowColor">@color/gray</item>
-        <item name="android:shadowDx">10</item>
+
+
 
 
 
     </style>
+
+    <style name="Button_yellow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:background">@drawable/button_yellow</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/blue</item>
+
+
+
+
+    </style>
+
+
+
 
 
     <style name="linkAcesso">
