--- a/app/src/main/res/layout/activity_primeiro_acesso.xml
+++ b/app/src/main/res/layout/activity_primeiro_acesso.xml
@@ -61,6 +61,7 @@
         android:id="@+id/editTextName"
         style="@style/editText"
         app:layout_constraintTop_toTopOf="@id/conteinerComponents"
+        android:drawableRight="@drawable/baseline_person_2_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
@@ -82,6 +83,7 @@
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         android:hint="Seu CPF"
+        android:drawableRight="@drawable/document"
         android:inputType="text" />
 
 
@@ -97,6 +99,7 @@
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         android:hint="Seu Telefone"
+        android:drawableRight="@drawable/smartphone"
         android:inputType="text" />
 
     <EditText
@@ -111,6 +114,7 @@
         android:layout_marginStart="15sp"
         android:layout_marginEnd="15sp"
         android:hint="Seu Email"
+        android:drawableRight="@drawable/email"
         android:inputType="textEmailAddress" />
 
 
@@ -127,6 +131,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:inputType="textPassword"
         android:hint="Sua Senha"
+        android:drawableRight="@drawable/baseline_remove_eye_24"
         />
 
 
@@ -143,6 +148,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:hint="Confirme a Senha"
+        android:drawableRight="@drawable/baseline_remove_eye_24"
+        android:drawableTint="@color/gray"
         />
 
 
