--- a/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
@@ -4,6 +4,188 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalhesChamadoEmAndamento">
+    tools:context=".DetalhesChamadoEmAndamento"
+    android:background="@color/blue">
+
+    <View
+        android:id="@+id/view_detalhes"
+        android:layout_width="match_parent"
+        android:layout_height="540dp"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+
+        />
+
+    <TextView
+        android:id="@+id/numero_chamado_detalhes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="#2023226598"
+        android:textSize="10dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        />
+
+    <View
+        android:id="@+id/flag_andamento"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/flag_andamento"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintEnd_toEndOf="@+id/view_detalhes"
+        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        android:layout_marginTop="45dp"
+        android:layout_marginHorizontal="60dp"
+
+        />
+
+
+    <TextView
+        android:id="@+id/flag_andamento_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="em andamento"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/flag_andamento"
+        app:layout_constraintTop_toTopOf="@id/flag_andamento"
+        app:layout_constraintEnd_toEndOf="@id/flag_andamento"
+        app:layout_constraintBottom_toBottomOf="@id/flag_andamento"
+
+        />
+
+    <TextView
+        android:id="@+id/campus_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CAMPUS"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
+        android:layout_marginTop="40sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/editTexCampus"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/flag_andamento"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        android:layout_widtht="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="140dp"
+        android:hint="Politécnico"
+        android:inputType="text" />
+
+
+
+    <TextView
+        android:id="@+id/predio_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PRÉDIO"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/campus_textview"
+        android:layout_marginTop="30sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/editTextPredio"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/editTexCampus"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        android:layout_widtht="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="140dp"
+        android:hint="SEPT"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/descricao_localizacao_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descreva a localização"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/editTextPredio"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/descricao_localizacao_editText"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        android:layout_widtht="match_parent"
+        android:layout_height="60sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="60dp"
+        android:hint=""
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/descricao_problema_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descreva o problema"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_editText"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/descricao_problema_editText"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        android:layout_widtht="match_parent"
+        android:layout_height="100sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="60dp"
+        android:hint=""
+        android:inputType="text" />
+
+
+    <TextView
+        android:id="@+id/anexos_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anexos"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
