--- a/app/src/main/res/layout/activity_homepage_usuario.xml
+++ b/app/src/main/res/layout/activity_homepage_usuario.xml
@@ -9,16 +9,108 @@
 
     >
 
+    <View
+        android:id="@+id/container_user"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/container_user"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+
+        />
+
+    <TextView
+        android:id="@+id/container_user_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="JE"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/container_user"
+        app:layout_constraintEnd_toEndOf="@id/container_user"
+        app:layout_constraintStart_toStartOf="@id/container_user"
+        app:layout_constraintTop_toTopOf="@id/container_user"
+
+
+        />
+
+    <TextView
+        android:id="@+id/saudacao_user_ola"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Olá,"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@id/container_user"
+        app:layout_constraintTop_toTopOf="@id/container_user"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+
+
+        />
+
+    <TextView
+        android:id="@+id/saudacao_user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Janaina Ercole"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@id/container_user"
+        app:layout_constraintTop_toBottomOf="@+id/saudacao_user_ola"
+        android:layout_marginLeft="20dp"
+
+
+
+        />
+
+
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonNovoChamado"
         style="@style/Button_yellow"
         android:onClick="novoChamado"
         android:text="Novo Chamado"
         android:textAllCaps="true"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/container_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:drawableRight="@drawable/novochamado"
+        android:padding="20sp"
         />
+
+
+    <TextView
+        android:id="@+id/meuschamados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="meus chamados"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNovoChamado"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+
+
+
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="430dp"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meuschamados"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="20dp"
+
+    />
 
 
 
