correção erro width

--- a/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
@@ -80,7 +80,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@id/flag_andamento"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="140dp"
@@ -109,7 +109,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@id/editTexCampus"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="140dp"
@@ -136,7 +136,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="60sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
@@ -163,7 +163,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="100sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
