--- a/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
@@ -82,7 +82,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@id/flag_aberto"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="140dp"
@@ -111,7 +111,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@id/editTexCampus"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="140dp"
@@ -138,7 +138,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="90sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
@@ -165,7 +165,7 @@
         style="@style/editText"
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        android:layout_widtht="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="150sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
