--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,14 +62,14 @@
                 app:layout_constraintTop_toBottomOf="@id/editTextCPFLogin"
                 android:inputType="textPassword" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_acessar"
-                style="@style/Button_blue"
-                android:onClick="login"
-                android:text="Entrar"
-                app:layout_constraintStart_toStartOf="@id/containerComponents"
-                app:layout_constraintEnd_toEndOf="@id/containerComponents"
-                app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_acessar"
+            style="@style/Button_blue"
+            android:onClick="logar"
+            android:text="Entrar"
+            app:layout_constraintEnd_toEndOf="@id/containerComponents"
+            app:layout_constraintStart_toStartOf="@id/containerComponents"
+            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
