--- a/app/src/main/res/layout/activity_cadastro_operario.xml
+++ b/app/src/main/res/layout/activity_cadastro_operario.xml
@@ -30,6 +30,17 @@
         android:layout_margin="10dp"
         />
 
+    <ImageView
+        android:id="@+id/menuoperario"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/menuopcoesbranco"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        android:onClick="menuOperario"
+        />
+
 
     <TextView
         android:id="@+id/cadastro"
