--- a/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
@@ -7,7 +7,45 @@
     tools:context=".DetalhesChamadoAberto"
     android:background="@color/blue">
 
+<com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/toolbar2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:title="Detalhes Do Chamado"
+            android:background="@color/yellow"
+            android:titleMarginLeft="100dp"
+            android:titleMarginStart="50dp"
 
+            />
+        <ImageView
+            android:id="@+id/retornoHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/retorno"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="10dp"
+            android:onClick="voltarHome"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.appbar.AppBarLayout>
 
     <View
         android:id="@+id/view_detalhes"
@@ -16,7 +54,9 @@
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="65dp"
 
 
         />
@@ -31,7 +71,8 @@
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         app:layout_constraintTop_toTopOf="@+id/view_detalhes"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+
         />
 
     <View
@@ -42,7 +83,7 @@
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         app:layout_constraintEnd_toEndOf="@+id/view_detalhes"
         app:layout_constraintTop_toTopOf="@+id/view_detalhes"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="60dp"
 
         />
