--- a/app/src/main/res/layout/activity_homepage_operario.xml
+++ b/app/src/main/res/layout/activity_homepage_operario.xml
@@ -22,6 +22,26 @@
 
         />
 
+    <ImageView
+        android:id="@+id/menuoperario"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/menuopcoesbranco"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        android:onClick="menuOperario"
+        />
+
+
+
+
+
+
+
+
+
+
     <TextView
         android:id="@+id/container_operario_text"
         android:layout_width="wrap_content"
