--- a/app/src/main/res/layout/activity_homepage_usuario.xml
+++ b/app/src/main/res/layout/activity_homepage_usuario.xml
@@ -22,6 +22,17 @@
 
         />
 
+    <ImageView
+        android:id="@+id/menu"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/menuopcoesbranco"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        android:onClick="menuUsuario"
+        />
+
     <TextView
         android:id="@+id/container_user_text"
         android:layout_width="wrap_content"
