--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -53,61 +53,33 @@
 
         />
 
-    <EditText
-        android:id="@+id/editTexCampus"
-        style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/numero_chamado_detalhes"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="140dp"
-        android:hint="Politécnico"
-        android:inputType="text" />
-
-
 
     <TextView
         android:id="@+id/predio_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="20dp"
         android:text="PRÉDIO"
-        android:textSize="15dp"
         android:textColor="@color/gray"
+        android:textSize="15dp"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@id/campus_textview"
-        android:layout_marginTop="30sp"
-        android:layout_marginLeft="40sp"
 
 
-        />
-
-    <EditText
-        android:id="@+id/editTextPredio"
-        style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/editTexCampus"
-        app:layout_constraintStart_toEndOf="@+id/campus_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="140dp"
-        android:hint="SEPT"
-        android:inputType="text" />
+        app:layout_constraintTop_toBottomOf="@id/campus_textview" />
 
     <TextView
         android:id="@+id/descricao_localizacao_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Descreva a localização"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@id/editTextPredio"
-        android:layout_marginTop="10sp"
         android:layout_marginLeft="40sp"
+        android:text="Descreva a localização"
+        android:textColor="@color/gray"
+        android:textSize="15dp"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
 
 
-        />
+        tools:layout_editor_absoluteY="182dp" />
 
     <EditText
         android:id="@+id/descricao_localizacao_editText"
@@ -191,16 +163,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <Spinner
+        android:id="@+id/campusSpinner"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="44dp"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        tools:layout_editor_absoluteY="85dp" />
 
-
-
-
-
-
-
-
-
-
+    <Spinner
+        android:id="@+id/predioSpinner"
+        android:layout_width="0dp"
+        android:layout_height="31dp"
+        android:layout_marginEnd="48dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/predio_textview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/predio_textview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
